fixes fonts and overflow

--- a/src/assets/styles/global/_base.scss
+++ b/src/assets/styles/global/_base.scss
@@ -1,5 +1,6 @@
 html {
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 *, *:before, *:after {
@@ -12,6 +13,7 @@ img {
 
 body {
   font-family: $font-primary;
+  overflow-x: hidden;
 }
 
 .box {
