--- a/src/assets/styles/vars/_fonts.scss
+++ b/src/assets/styles/vars/_fonts.scss
@@ -1,12 +1,12 @@
 @font-face {
   font-family: 'HKGrotesk-Bold';
-  src: url('/src/assets/fonts/HKGrotesk-Bold.otf') format('otf');
+  src: url('/src/assets/fonts/HKGrotesk-Bold.otf') format('opentype');
   font-weight: 600;
 }
 
 @font-face {
   font-family: 'HKGrotesk-Light';
-  src: url('/src/assets/fonts/HKGrotesk-Light.otf') format('otf');
+  src: url('/src/assets/fonts/HKGrotesk-Light.otf') format('opentype');
   font-weight: 400;
 }
 
